# ros-maze-navigation

./: .gitignore  CMakeLists.txt  README.md  moving.launch  package.xml  smooth.launch
docs/: project-summary.md
include/: moving.hpp
msg/: Walls.msg
src/: centering.cpp  corridor.cpp  execute_plan_server.cpp  moving.cpp  paradriver.cpp  paradriver.hpp  pd_control.cpp  publish_map.py  smooth_plan.cpp  smooth_plan.hpp  smooth_server.cpp  square_no_sensors.cpp  square_with_encoders.cpp  stopper.cpp  walls.cpp  wanderer.cpp
srv/: ExecutePlan.srv  StopSrv.srv
